Update folder structure and model inference

--- a/vortex/notebooks/Border Box Regression.ipynb
+++ b/vortex/notebooks/Border Box Regression.ipynb
@@ -23,18 +23,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "\n",
-    "sys.path.insert(0, '/home/indrap24/Desktop/Projects/VORTEX/vortex/utils')"
+    "sys.path.insert(0, '/home/indrap24/Desktop/Projects/VORTEX/vortex/border_box')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,12 +44,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import the necessary packages\n",
-    "from utils import config\n",
+    "from border_box import config\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras.applications import VGG16\n",
     "from tensorflow.keras.layers import Flatten, Dense, Input\n",
@@ -77,6 +77,13 @@
     "df.drop([\"width\", \"height\", \"class\"], axis=1, inplace=True)\n",
     "# save the dataframe\n",
     "df.to_csv(\"../../data/processed/Obj_Det/labels.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Loading Data"
    ]
   },
   {
@@ -989,6 +996,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Loading the pre-trained model: VGG16"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -1011,6 +1025,13 @@
     "bboxHead = Dense(4, activation=\"sigmoid\")(bboxHead)\n",
     "# construct the model we will fine-tune for bounding box regression\n",
     "model = Model(inputs=vgg.input, outputs=bboxHead)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Training"
    ]
   },
   {
@@ -1149,6 +1170,39 @@
     "plt.ylabel(\"Loss\")\n",
     "plt.legend(loc=\"lower left\")\n",
     "plt.savefig(config.PLOT_PATH)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Border Box - Inference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] loading object detector...\n",
+      "2022-03-29 00:04:18.473317: E tensorflow/stream_executor/cuda/cuda_driver.cc:271] failed call to cuInit: CUDA_ERROR_NO_DEVICE: no CUDA-capable device is detected\n",
+      "2022-03-29 00:04:18.473350: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:169] retrieving CUDA diagnostic information for host: indra-pop-os\n",
+      "2022-03-29 00:04:18.473356: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:176] hostname: indra-pop-os\n",
+      "2022-03-29 00:04:18.473461: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:200] libcuda reported version is: 510.54.0\n",
+      "2022-03-29 00:04:18.473486: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:204] kernel reported version is: 510.54.0\n",
+      "2022-03-29 00:04:18.473493: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:310] kernel version seems to match DSO: 510.54.0\n",
+      "2022-03-29 00:04:18.473742: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "^C\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python ./border_box/predict.py --input ../../data/processed/Obj_Det/images/3DIMG_01DEC2017_0300_L1B_STD_IR2.jpg"
    ]
   },
   {
