Update inference files

--- a/vortex/notebooks/Intensity Classifier .ipynb
+++ b/vortex/notebooks/Intensity Classifier .ipynb
@@ -2767,7 +2767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "id": "198823a4",
    "metadata": {},
    "outputs": [
@@ -2775,15 +2775,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-03-29 11:05:39.167162: E tensorflow/stream_executor/cuda/cuda_driver.cc:271] failed call to cuInit: CUDA_ERROR_NO_DEVICE: no CUDA-capable device is detected\n",
-      "2022-03-29 11:05:39.167194: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:169] retrieving CUDA diagnostic information for host: indra-pop-os\n",
-      "2022-03-29 11:05:39.167201: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:176] hostname: indra-pop-os\n",
-      "2022-03-29 11:05:39.167311: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:200] libcuda reported version is: 510.54.0\n",
-      "2022-03-29 11:05:39.167355: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:204] kernel reported version is: 510.54.0\n",
-      "2022-03-29 11:05:39.167364: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:310] kernel version seems to match DSO: 510.54.0\n",
-      "2022-03-29 11:05:39.167639: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2022-03-29 11:14:41.297217: E tensorflow/stream_executor/cuda/cuda_driver.cc:271] failed call to cuInit: CUDA_ERROR_NO_DEVICE: no CUDA-capable device is detected\n",
+      "2022-03-29 11:14:41.297259: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:169] retrieving CUDA diagnostic information for host: indra-pop-os\n",
+      "2022-03-29 11:14:41.297270: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:176] hostname: indra-pop-os\n",
+      "2022-03-29 11:14:41.297368: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:200] libcuda reported version is: 510.54.0\n",
+      "2022-03-29 11:14:41.297403: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:204] kernel reported version is: 510.54.0\n",
+      "2022-03-29 11:14:41.297413: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:310] kernel version seems to match DSO: 510.54.0\n",
+      "2022-03-29 11:14:41.297702: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "The predicted class for the given image is:  NORMAL\n"
+      "\u001b[32mThe predicted class for the given image is: \u001b[0m \u001b[31mNORMAL\u001b[0m\n"
      ]
     }
    ],
