--- a/vortex/notebooks/Intensity Classifier .ipynb
+++ b/vortex/notebooks/Intensity Classifier .ipynb
@@ -2793,8 +2793,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "92f8549edb95926e67d9af130c51c844e0526e8912c849c6708914c947287dc8"
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.11 ('vortex3.9')",
    "language": "python",
    "name": "python3"
   },
@@ -2808,7 +2811,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.11"
   }
  },
  "nbformat": 4,
